# objsplit

./: CMakeLists.txt  README.md
data/: fileformats.txt
src/: CMakeLists.txt  objsplit.cpp  objsplit.h
src/cmake/: FindCGAL.cmake
